# api/docs/swagger.json
@@ -18,10 +18,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/server.healthResponse"
                         }
                     }
                 }
@@ -40,8 +37,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Device hostname",
-                        "name": "X-Hostname",
+                        "description": "Device ID",
+                        "name": "X-DeviceID",
                         "in": "header",
                         "required": true
                     }
@@ -88,8 +85,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Device hostname",
-                        "name": "X-Hostname",
+                        "description": "Device ID",
+                        "name": "X-DeviceID",
                         "in": "header",
                         "required": true
                     },
@@ -157,6 +154,14 @@
                 },
                 "value": {
                     "type": "number"
+                }
+            }
+        },
+        "server.healthResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
                 }
             }
         }
